# AppPetCat

./: settings.gradle.kts
app/: appp3tc4t-firebase-adminsdk-jfios-88ee1719d2.json  build.gradle.kts  google-services.json
app/src/androidTest/java/com/example/apppetcat/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_lib.c  sort.c  validate_cat.c
app/src/main/java/com/example/apppetcat/: AddCatActivity.kt  AddReminderActivity.kt  Cat.kt  CatAdapter.kt  HealthRemindersActivity.kt  LoginActivity.kt  MainActivity.kt  PetCareActivity.kt  ProfileAcitivty.kt  RegisterActivity.kt  RemindersAdapter.kt
app/src/main/java/com/example/apppetcat/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_add.xml
app/src/main/res/layout/: activity_add_cat.xml  activity_add_reminder.xml  activity_health_reminder.xml  activity_login.xml  activity_main.xml  activity_profile.xml  activity_register.xml  care_tips.xml  health_reminders.xml  item_cat_card.xml  item_reminder.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/example/apppetcat/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
